--- a/Pagina/contacto.html
+++ b/Pagina/contacto.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="favicon-32x32" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="icon" type="favicon-16x16" sizes="16x16" href="img/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+
 </head>
 
 <body>
@@ -72,13 +73,13 @@
                             </h6>
                         </div>
 
-                        <form action="#" name="form">
+                        <form action="#" onsubmit="return validar()" name="form">
                             <div class="row">
                                 <div class="col s12 m6">
                                     <div class="icon-block">
                                         <div class="nombre">
                                             <label for="nombre"> NOMBRE <br> </label>
-                                            <input type="text" name="nombre" id="nombre" required> <br>
+                                            <input type="text" name="nombre" id="nombre"> <br>
                                         </div>
                                     </div>
                                 </div>
@@ -87,7 +88,7 @@
                                     <div class="icon-block">
                                         <div class="provincia">
                                             <label for="provincia"> PROVINCIA <br> </label>
-                                            <input type="text" name="provincia" id="provincia" required> <br>
+                                            <input type="text" name="provincia" id="provincia"> <br>
                                         </div>
                                     </div>
                                 </div>
@@ -98,7 +99,7 @@
                                     <div class="icon-block">
                                         <div class="tel">
                                             <label for="telefono">TELÉFONO <br> </label>
-                                            <input type="text" name="telefono" id="telefono" required> <br>
+                                            <input type="text" name="telefono" id="telefono"> <br>
                                         </div>
                                     </div>
                                 </div>
@@ -107,28 +108,32 @@
                                     <div class="icon-block">
                                         <div class="email">
                                             <label for="email"> EMAIL <br> </label>
-                                            <input type="email" name="email" id="email" required> <br>
+                                            <input type="text" name="email" id="email"> <br>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="consulta">
                                     <label for="consulta"> CONSULTA<br> </label>
-                                    <textarea name="consulta" id="consulta" cols="50" rows="100" required></textarea>
+                                    <textarea name="consulta" id="consulta" cols="50" rows="100"></textarea>
                                     <br>
                                     <br>
                                 </div>
 
-                                <div class="row center">
-                                    <button type="submit" id="download-button" class="btn-large waves-effect waves-light lighten-1 boton_ConoceComo">ENVIAR</a>
+                                <div class="row center boton">
+                                    <button type="submit" id="boton" class="btn-large waves-effect waves-light lighten-1 boton_ConoceComo">ENVIAR</a>
+                                        <br> </button>
+                                    <div id="mensaje" class="Error">
+                                    </div>
                                 </div>
+
 
                         </form>
 
                     </section>
+                    </div>
                 </div>
             </div>
-        </div>
 
         </div>
     </main>
@@ -170,6 +175,8 @@
     <!--  Scripts-->
     <script src="js/materialize.min.js"></script>
     <script src="js/materialize.js"></script>
+    <script src="js/funcionalidadContacto.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
 </body>
 
 </html>
